# CodeCompletion_ML_Project

./: README.md  installation_commands.txt  pyproject.toml
Dataset/processed_safim/: api_completion_processed.jsonl  control_completion_fixed_processed.jsonl  control_completion_processed.jsonl
Dataset/processed_safim_few_shot/: api_completion_processed_few_shot.jsonl
Dataset/safim/: README.md  api_completion.jsonl
Results/deepseek-coder-6.7b-instruct/few-shot/: control_completion_processed_few_shot_output.csv
Results/deepseek-coder-6.7b-instruct/zero-shot/: api_completion_processed_few_shot_output.csv
codes/: codellama.py  constants.py  dataset_preprocessing.py  deepseek.py  extract_top_k_samples_in_context.py  incoder.py  metrics.py  starcoder.py  utils.py
results/codellama-7b-Python-hf/few-shot/: api_completion_processed_few_shot_output.csv  block_completion_processed_few_shot_output.csv  control_completion_processed_few_shot_output.csv
results/codellama-7b-Python-hf/zero-shot/: api_completion_processed_few_shot_output.csv  block_completion_processed_few_shot_output.csv  control_completion_processed_few_shot_output.csv
results/deepseek-coder-6.7b-instruct/few-shot/: api_completion_processed_few_shot_output.csv  block_completion_processed_few_shot_output.csv
results/deepseek-coder-6.7b-instruct/zero-shot/: block_completion_processed_few_shot_output.csv  control_completion_processed_few_shot_output.csv
results/incoder-6B/few-shot/: api_completion_processed_few_shot_output.csv  block_completion_processed_few_shot_output.csv  (+1 more)
(+9 files in other folders)
